examples/bad/wrong-tuple-types-function.elina
fn f(): tuple<int, tuple<bool, string, tuple<bool>>> {
  var x: int;
  var y: bool;
  var z: string;
  return [x, [y, z, [x]]];
}

fn main(): void {
}